fix duet-date-picker filling invisible height

--- a/src/main/css/2-components.css
+++ b/src/main/css/2-components.css
@@ -20,6 +20,17 @@
   margin-top: auto;
 }
 
+duet-date-picker .duet-date__dialog {
+  /* completely "hide" the div to avoid adding height to the parent element. */
+  height: 0;
+  overflow: hidden;
+}
+
+duet-date-picker .duet-date__dialog.is-active {
+  height: auto;
+  overflow: auto;
+}
+
 duet-date-picker.edited ~ label > span {
   color: theme("colors.blue.600");
 }
